--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div class="alertContainer">
       <p>
-        این برنامه را برای گوش دادن به موسیقیای حرام نساختم و گناه روشن موسیقی
-        در این برنامه با خودت هست !!
+        این برنامه را برای گوش دادن به موسیقای حرام نساختم و گناه روشن کردن
+        موسیقی در این برنامه با خودت هست !!
       </p>
     </div>
     <div class="container">
